<resources>
    <string name="app_name">Bhumi RTE</string>

    <!-- Activity titles -->
    <string name="title_activity_main">Data Collection</string>
    <string name="title_activity_feedback">Give Feedback</string>
    <string name="title_activity_signup">Sign in</string>
    <string name="title_activity_credit">Credits</string>
    <string name="title_activity_password_reset">Forgot Password</string>

    <!-- Labels of various input fields -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_pincode">Pin Code</string>
    <string name="prompt_comment">Comments (Optional)</string>
    <string name="prompt_date_of_birth">Date of Birth of Child</string>
    <string name="prompt_name_of_parent">Name of Parent</string>
    <string name="prompt_name_of_child">Name of Child</string>
    <string name="prompt_dob">Date of Birth of child (dd-mm-yyyy)</string>
    <string name="prompt_check_boxes">Do you have ?</string>
    <string name="prompt_checkbox_income_certificate">Income Certificate</string>
    <string name="prompt_checkbox_community_certificate">Community Certificate</string>
    <string name="prompt_checkbox_birth_certificate">Birth Certificate</string>
    <string name="prompt_checkbox_address_proof">Current Address Proof</string>
    <string name="prompt_verify_password">Verify Password</string>

    <!-- Error texts -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_short_password">Password must have atleast 8 characters</string>
    <string name="error_password_doesnt_match"> Passwords don\'t match</string>
    <string name="error_field_required">This field is required</string>


    <!-- Button labels -->
    <string name="button_sign_up">Sign Up</string>
    <string name="button_submit">Submit</string>
    <string name="button_signin">Signin</string>
    <string name="button_signup">Signup</string>
    <string name="button_forgot_password">Forgot password?</string>
    <string name="button_know_more">Click here to know more</string>
    <string name="button_reset_password">Reset password</string>
    <string name="button_volunteer_signup">Sign up to Volunteer</string>


    <!-- Instructions and descriptions-->
    <string name="forgot_password_instructions">Please enter your registered email to get the password reset link.</string>
    <string name="bhumi_logo_content_description">Bhumi NGO logo</string>

    <!-- menu options -->
    <string name="option_singout">Signout</string>
    <string name="option_give_feedback">Give Feedback</string>
    <string name="option_credits">Credits</string>
    <string name="option_about_rte">About RTE</string>
    <string name="reset_password_instruction">Please provide your valuable feedback to improve this application</string>
    <string name="text_developed_by">Developed By</string>
    <string name="developer_name_deepak_chethan">Deepak Chethan, Volunteer</string>
    <string name="error_small_phone_number">Enter 10 digit phone number</string>
    <string name="error_small_pin_code">Enter 6 digit pin code</string>

    <!-- Activity labels -->
    <string name="title_activity_about_rte">About RTE</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="credits">Credits</string>
    <string name="reset_password">Reset Password</string>


    <!-- URLS -->
    <string name="auth_api_url">http://ec2-35-154-167-215.ap-south-1.compute.amazonaws.com:1997</string>
    <string name="rte_api_url">http://ec2-35-154-167-215.ap-south-1.compute.amazonaws.com:5432</string>
    <string name="volunteer_url">http://rte25.bhumi.ngo/volunteer/?utm_srouce=BRapp</string>
    <string name="bhumi_url">"http://rte25.bhumi.ngo/"</string>
</resources>
